@@ -1,3 +1,11 @@
+2026-01-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* tests/smoke-test.sh: Add (directory and) test script.
+	* chem.am: Add script to new `chem_TESTS` macro and append that
+	macro to `TESTS` macro, so that "make check" runs the test.
+	Append `chem_TESTS` to `EXTRA_DIST`, so that the test script
+	ships in distribution archives.
+
 2025-12-31  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* chem.am (EXTRA_DIST): Ship "COPYRIGHT" file in distribution
